--- a/index.html
+++ b/index.html
@@ -9,34 +9,57 @@
     <title>Legend of Zelda Hangman</title>
 </head>
 <body>
-    <header class="row">
+    <header class="container-fluid">
         <div class="col-2"></div>
         <h1 class="col-8"> Legend of Zelda Hangman</h1><!--temporary placeholder for header, will make header in corell painter-->
         <img src="" class="Triforce">
         <div class="col-2"></div>  <!--this is where the triforce image will be inserted-->
     </header>
-    <div class="row">
-        <div class="col-2"></div>
-        <div class="Battle col-8">
-            <img src="assets/css/images/background_1.jpg" class="Background">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-2">
+                <div class="score">
+                <br><br><br>
+                <h2>Score</h2>
+                <br><br>
+                    <div class="wins">
+                        <h4> Wins : 0</h4>
+                    </div>
+                    <br>
+                    <div class="guesses-left">
+                        <h4> Guesses Left : 7</h4>
+                    </div>
+                </div>
+            </div>
+            <div class="Battle col-8">
+                <img src="assets/css/images/background_1.jpg" class="Background">
+            </div>
+            <div class="col-2">
+                <div class="letters">
+                    <br>
+                    <h2> Letters Guessed </h2>
+                    <div class="guessed-letters">
+                        <!-- Already guesssed letters go here-->
+                    </div>
+                </div>
+            </div>    
         </div>
-        <div class="col-2"></div>    
+        <div class="row">
+            <div class="guess-area">
+                <section>
+                    <h3 class="Start">Press any key to get started!</h3>
+                </section>
+                <h4 class="word-area">
+                    <!--word guess area-->
+                </h4>        
+            </div>
+        </div>
     </div>
-    <div class="letters">
-    <h4>Letters Guessed</h4>
+    <div class="footer">
+        <footer>
+            <small>Created by Amanda Padilla 2018</small>
+        </footer>
     </div>
-    <div class="guess-area">
-    <h3 class="Start">Press any key to get started!</h3>
-        <h4 class="word-area">
-            <!--word guess area-->
-        </h4>        
-    </div>
-    <section>
-        <!--scrore keeping/guesses remaining-->
-    </section>
-    <footer>
-        <small>created by Amanda Padilla 2018</small>
-    </footer>
 <script src="assets/javascript/game.js"></script>
 </body>
 </html>
