--- a/index.html
+++ b/index.html
@@ -22,17 +22,16 @@
                 <br><br><br>
                 <h2>Score</h2>
                 <br><br>
-                    <div class="wins">
-                        <h4> Wins : 0</h4>
-                    </div>
+                        <h4> Wins </h4>
+                        <h4 class="wins"></h4>
                     <br>
-                    <div class="guesses-left">
-                        <h4> Guesses Left : 7</h4>
+                        <h4> Guesses Left </h4>
+                        <h4 class="guesses-left"></h4>
                     </div>
                 </div>
             </div>
             <div class="Battle col-8">
-                <img src="assets/css/images/background_1.jpg" class="Background">
+                <img src="assets/css/images/background_3.jpg" class="Background">
             </div>
             <div class="col-2">
                 <div class="letters">
