--- a/index.html
+++ b/index.html
@@ -1,64 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Reset CSS Styling sheet -->
     <link rel="stylesheet" href="assets/css/reset.css" type="text/css">
+    <!-- Css Styling sheet -->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <title>Legend of Zelda Hangman</title>
 </head>
+
 <body>
-    <header class="container-fluid">
-        <div class="col-2"></div>
-        <h1 class="col-8"> Legend of Zelda Hangman</h1><!--temporary placeholder for header, will make header in corell painter-->
+    <!-- Header of page -->
+    <header class="titleLine">
+        <h1 class="title"> Legend of Zelda Hangman</h1>
+        <!--this is where the triforce image will be inserted-->
         <img src="" class="Triforce">
-        <div class="col-2"></div>  <!--this is where the triforce image will be inserted-->
     </header>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-2">
-                <div class="score">
-                <br><br><br>
-                <h2>Score</h2>
-                <br><br>
-                        <h4> Wins </h4>
-                        <h4 class="wins"></h4>
-                    <br>
-                        <h4> Guesses Left </h4>
-                        <h4 class="guesses-left"></h4>
-                    </div>
-                </div>
-            </div>
-            <div class="Battle col-8">
-                <img src="assets/css/images/background_3.jpg" class="Background">
-            </div>
-            <div class="col-2">
-                <div class="letters">
-                    <br>
-                    <h2> Letters Guessed </h2>
-                    <div class="guessed-letters">
-                        <!-- Already guesssed letters go here-->
-                    </div>
-                </div>
-            </div>    
+    <!-- Score area
+        <div class=" container-fluid row col-2 score">
+            <br><br><br>
+            <h2>Score</h2>
+            <br><br>
+            <h4> Wins </h4>
+            <h4 class="wins"></h4>
+            <br>
+            <h4> Guesses Left </h4>
+            <h4 class="guesses-left"></h4>
         </div>
-        <div class="row">
-            <div class="guess-area">
-                <section>
-                    <h3 class="Start">Press any key to get started!</h3>
-                </section>
-                <h4 class="word-area">
-                    <!--word guess area-->
-                </h4>        
+    Battle area 
+        <div class="col-8">
+            <img src="assets/css/images/background_3.jpg" class="Background">
+        </div>
+    Letters guessed area
+        <div class="col-2">
+            <div class="letters">
+                <br>
+                <h2> Letters Guessed </h2>
+                <div class="guessed-letters"> -->
+    <!-- Already guesssed letters go here-->
+    <!-- </div>
             </div>
         </div>
+    </div>
+    <div class="row">
+        <div class="guess-area">
+            <section>
+                <h3 class="Start">Press any key to get started!</h3>
+            </section>
+            <h4 class="word-area"> -->
+    <!--word guess area-->
+    <!-- </h4>
+        </div>
+    </div>
     </div>
     <div class="footer">
         <footer>
             <small>Created by Amanda Padilla 2018</small>
         </footer>
-    </div>
-<script src="assets/javascript/game.js"></script>
+    </div> -->
+    <script src="assets/javascript/game.js"></script>
 </body>
+
 </html>
