working UI and game mechanics with javascript

--- a/index.html
+++ b/index.html
@@ -19,48 +19,42 @@
         <!--this is where the triforce image will be inserted-->
         <img src="" class="Triforce">
     </header>
-    <!-- Score area
-        <div class=" container-fluid row col-2 score">
-            <br><br><br>
-            <h2>Score</h2>
-            <br><br>
-            <h4> Wins </h4>
+    <!-- Score area -->
+    <div class="activeField">
+        <div class="scoreBoard">
+            <h2 class="score">Score</h2>
+            <h4 class="win"> Wins </h4>
             <h4 class="wins"></h4>
-            <br>
-            <h4> Guesses Left </h4>
+            <h4 class="guess"> Guesses Left </h4>
             <h4 class="guesses-left"></h4>
         </div>
-    Battle area 
-        <div class="col-8">
+    <!-- Battle area -->
+        <div class="battle">
             <img src="assets/css/images/background_3.jpg" class="Background">
         </div>
-    Letters guessed area
-        <div class="col-2">
+    <!-- Letters guessed area -->
+        <div class="letterArea">
             <div class="letters">
-                <br>
-                <h2> Letters Guessed </h2>
-                <div class="guessed-letters"> -->
-    <!-- Already guesssed letters go here-->
-    <!-- </div>
+                <h2 class="letter"> Letters Guessed </h2>
+                <div class="guessed-letters">
+                </div>
             </div>
         </div>
     </div>
-    <div class="row">
-        <div class="guess-area">
-            <section>
-                <h3 class="Start">Press any key to get started!</h3>
-            </section>
-            <h4 class="word-area"> -->
-    <!--word guess area-->
-    <!-- </h4>
-        </div>
-    </div>
+    <!-- Word guessing area-->
+    <div class="guess-area">
+        <section>
+            <h3 class="Start">Press any key to get started!</h3>
+        </section>
+        <h4 class="word-area">
+            <!--word guess area-->
+        </h4>
     </div>
     <div class="footer">
         <footer>
             <small>Created by Amanda Padilla 2018</small>
         </footer>
-    </div> -->
+    </div>
     <script src="assets/javascript/game.js"></script>
 </body>
 
